# soporte_valex

./: .env.example  .gitignore  Dockerfile  README.md  architecture-components-flow.drawio  doc_valex.html  docker-compose.yml  flashpost-collection-devin-api.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
schemas/oracle/: ddl.sql
scripts/: approve_session.py  check_devin_session.py  count_unread_teams.py  inspect_teams_emails.py  list_sessions.py  mark_read_teams.py  mock_llm.py  preflight.py  run_devin_poller.py  run_outlook_listener.py  send_test_card.py  show_devin_messages.py  test_imap_login.py  test_outlook_com.py  test_servicenow.ps1
src/: __init__.py
src/adapters/: __init__.py
src/agents/: __init__.py
src/api/: __init__.py  audit.py  deps.py  devin.py  finops.py  ingestion.py  main.py  servicenow.py  teams.py
src/core/: __init__.py  config.py  exceptions.py  models.py  request_parsing.py
src/ingestion/: __init__.py  background.py  processor.py
src/integrations/: __init__.py  base.py  router.py
src/tools/: __init__.py  base.py  openshift.py  pipeline.py  registry.py  schema_guard.py  servicenow_folio.py  telemetry.py
src/workflows/: __init__.py  approval.py  audit.py  folio_assistant.py  state_manager.py
tests/: conftest.py  test_api.py  test_config.py  test_devin.py  test_devin_poller.py  test_folio_assistant.py  test_ingestion.py  test_openshift_client.py  test_orchestrator.py  test_outlook_listener.py  test_parser.py  test_request_parsing.py  test_servicenow_client.py  test_teams_webhook.py  test_tools.py
(+22 files in other folders)
