[project]
name = "soporte-valex"
version = "0.1.0"
description = "Sistema multi-agente de soporte transversal (ReAct + MCP + Devin)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
